update endoints
