# internal/service/handlers/prepare_certificate.go
@@ -21,7 +21,7 @@ const SENDCERTIFICATE = "certificate"
 
 func PrepareCertificate(w http.ResponseWriter, r *http.Request) {
 	request, err := requests.NewPrepareCertificates(r)
-
+	users := request.PrepareUsers()
 	var usersResult []*data.User
 	var files []handlers.FilesBytes
 	var filesCert []handlers.FilesBytes
@@ -35,7 +35,7 @@ func PrepareCertificate(w http.ResponseWriter, r *http.Request) {
 
 	os.MkdirAll(helpers.Config(r).QRCode().QRPath, os.ModePerm)
 	defer os.RemoveAll(helpers.Config(r).QRCode().QRPath)
-	for id, user := range request.Data {
+	for id, user := range users {
 		user.ID = id
 		if user.DataHash != "" || user.Signature != "" || user.DigitalCertificate != "" || user.Certificate != "" || user.SerialNumber != "" {
 			helpers.Log(r).Debug("has already")
@@ -53,7 +53,7 @@ func PrepareCertificate(w http.ResponseWriter, r *http.Request) {
 		user.SetDataHash(hash)
 		var file []byte
 		name := ""
-		file, name, err = qr.GenerateQR(request.Address)
+		file, name, err = qr.GenerateQR([]byte(request.Pdf.Address))
 		if err != nil {
 			helpers.Log(r).WithError(err).Error("failed to generate qr")
 			ape.Render(w, problems.InternalError())
@@ -85,18 +85,18 @@ func PrepareCertificate(w http.ResponseWriter, r *http.Request) {
 			ape.Render(w, problems.BadRequest(err))
 			return
 		}
-		filesCert = append(filesCert, handlers.FilesBytes{File: fileBytes, Name: name, ID: user.ID, Type: "application/pdf"})
+		filesCert = append(filesCert, handlers.FilesBytes{File: fileBytes, Name: name, ID: int(user.ID), Type: "application/pdf"})
 		usersResult = append(usersResult, user)
 	}
 
-	request.Data, err = handlers.Drive(client, helpers.Config(r), helpers.Log(r), files, request.Data, SENDQR)
+	usersResult, err = handlers.Drive(client, helpers.Config(r), helpers.Log(r), files, usersResult, SENDQR)
 	if err != nil {
 		helpers.Log(r).WithError(err).Error("failed to send date to drive")
 		ape.Render(w, problems.InternalError())
 		return
 	}
 
-	request.Data, err = handlers.Drive(client, helpers.Config(r), helpers.Log(r), filesCert, request.Data, SENDCERTIFICATE)
+	usersResult, err = handlers.Drive(client, helpers.Config(r), helpers.Log(r), filesCert, usersResult, SENDCERTIFICATE)
 	if err != nil {
 		helpers.Log(r).WithError(err).Error("failed to send date to drive")
 		ape.Render(w, problems.InternalError())
@@ -104,7 +104,7 @@ func PrepareCertificate(w http.ResponseWriter, r *http.Request) {
 	}
 
 	helpers.Log(r).Info("creating table")
-	errs := client.SetRes(usersResult, request.Url)
+	errs := client.SetRes(usersResult, request.Pdf.Url)
 	if errs != nil {
 		helpers.Log(r).Error("failed to send date to drive: Errors: ", errs)
 		ape.Render(w, problems.InternalError())
