# resources/model_pdfs_create_request.go
@@ -1,0 +1,11 @@
+/*
+ * GENERATED. Do not modify. Your changes might be overwritten!
+ */
+
+package resources
+
+type PdfsCreateRequest struct {
+	Address string  `json:"address"`
+	Data    []*User `json:"data"`
+	Url     string  `json:"url"`
+}
