# resources/model_user_attributes.go
@@ -1,0 +1,21 @@
+/*
+ * GENERATED. Do not modify. Your changes might be overwritten!
+ */
+
+package resources
+
+type UserAttributes struct {
+	Certificate        string `json:"Certificate"`
+	CourseTitle        string `json:"CourseTitle"`
+	DataHash           string `json:"DataHash"`
+	Date               string `json:"Date"`
+	DigitalCertificate string `json:"DigitalCertificate"`
+	ID                 int64  `json:"ID"`
+	Msg                string `json:"Msg"`
+	Note               string `json:"Note"`
+	Participant        string `json:"Participant"`
+	Points             string `json:"Points"`
+	SerialNumber       string `json:"SerialNumber"`
+	Signature          string `json:"Signature"`
+	TxHash             string `json:"TxHash"`
+}
